2010-01-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/menu.tcl:      [TIP 360] Make Tk menu activation
	* library/obsolete.tcl:  follow mouse movements.

2010-01-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/photo.n: [Bug 2927569] Multiple edits have peverted the
	original meaning of the phrase 'image file data' to reference
	a filename option that does not exist.

2010-01-07  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkTextDisp.c (AsyncUpdateLineMetrics): [Bug 2677890]: Fix
	odd text widget update problem that had scrollbars being unable to
	cover the whole widget. Fix is to reify the range to update sooner.

2010-01-06  Donal K. Fellows  <dkf@users.sf.net>

	* library/tk.tcl:		Centralize the definition of keys that
	* library/entry.tcl:		do common movement in entry and text
	* library/spinbox.tcl:		widgets. This is because they are
	* library/text.tcl:		subtlely different on the different
	* library/ttk/entry.tcl:	platforms. Lets Tk code work more
	* doc/event.n (PREDEFINED VIRTUAL EVENTS): correctly with platform
					conventions "out of the box".

	* generic/tkBind.c (HandleEventGenerate, DoWarp): [Bug 2926819]:
	* generic/tkInt.h (TkDisplay):			Factor out the pointer
	* generic/tkWindow.c (GetScreen):		warping code a bit
	* carbon/tkMacOSXMouseEvent.c (TkpWarpPointer): better and extend it
	* macosx/tkMacOSXMouseEvent.c (TkpWarpPointer): to work on OSX too.
	* unix/tkUnixEvent.c (TkpWarpPointer):
	* win/tkWinPointer.c (TkpWarpPointer):

	* unix/tkUnixWm.c (TkWmMapWindow): [Bug 1163496]: Allow windows to be
	* tests/wm.test (wm-transient-8.1): set to be transients for withdrawn
	masters correctly.

2010-01-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinDialog.c: [Patch 2898255]: Enable unlimited multiple file
	selection from the open files dialog. (pawlak,fellows,thoyts)

2010-01-05  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkMenu.c (MenuWidgetObjCmd): [Bug 220950]: Do not delete