@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: menu.n,v 1.31 2009/10/18 16:25:51 dkf Exp $
+'\" RCS: @(#) $Id: menu.n,v 1.32 2010/01/09 00:48:36 patthoyts Exp $
 '\" 
 .so man.macros
 .TH menu n 4.1 Tk "Tk Built-In Commands"
@@ -233,7 +233,8 @@ to system restrictions.
 Certain menus in a menubar will be treated specially.  On the Macintosh,
 access to the special Application, Window and Help menus is provided. On
 Windows, access to the Windows System menu in each window is provided.
-On X Windows, a special right-justified help menu is provided. In all
+On X Windows, a special right-justified help menu may be provided if
+Motif menu compatibility is enabled. In all
 cases, these menus must be created with the command name of the menubar
 menu concatenated with the special name. So for a menubar named
 \.menubar, on the Macintosh, the special menus would be .menubar.apple,
@@ -270,8 +271,11 @@ Alt+Spacebar.  Due to limitations in the Windows API, any font changes,
 colors, images, bitmaps, or tearoff images will not appear in the
 system menu.
 .PP
-When Tk see a Help menu on X Windows, the menu is moved to be last in
-the menubar and is right justified.
+When Tk sees a Help menu on X Windows and Motif menu compatibility is
+enabled the menu is moved to be last in the menubar and is right
+justified. Motif menu compatibility is enabled by setting the Tk option
+\fB*Menu.useMotifHelp\fR to true or by calling
+\fBtk::classic::restore menu\fR.
 .SH "CLONES"
 .PP
 When a menu is set as a menubar for a toplevel window, or when a menu
@@ -281,7 +285,7 @@ configuration of the original are reflected in the
 clone. Additionally, any cascades that are pointed to are also cloned
 so that menu traversal will work right. Clones are destroyed when
 either the tearoff or menubar goes away, or when the original menu is
-destroyed. 
+destroyed.
 .SH "WIDGET COMMAND"
 .PP
 The \fBmenu\fR command creates a new Tcl command whose
